# dados-abertos-receita

./: .gitignore  EXECUTION_LOGS.md  README.md  api_service.py  main.py  pyproject.toml
src/: __init__.py  main.py
src/business/: processar_clientes.py
src/core/: __init__.py  config.py  logger.py  paths.py  ports.py
src/dados_abertos_receita.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/infra/api/: dados_abertos.py
src/infra/database/: sqlite_connection.py
src/infra/files/: file_discovery.py  parquet_converter.py  zip_extractor.py
src/models/: cliente.py  execution_log.py
src/repositories/: cliente_repository.py  execution_log_repository.py
src/services/: api_service.py  cliente_api_service.py  cliente_service.py  execution_log_service.py  monthly_service.py
src/tests/: test_execution_logs.py
src/utils/: __main__.py  json_utils.py  metrics_reporter.py
